--- a/css/iconfont3.css
+++ b/css/iconfont3.css
@@ -1,8 +1,6 @@
 
-@font-face {
-  font-family: "iconfont";
-  src:url('../font/iconfont2.ttf');
-
+@font-face {font-family: "iconfont";
+  src: url('../font/iconfont3.ttf');
 }
 
 .iconfont {
@@ -13,5 +11,5 @@
   -webkit-text-stroke-width: 0.2px;
   -moz-osx-font-smoothing: grayscale;
 }
-.icon-huanyipi:before { content: "\f004c"; }
-.icon-iconfont30:before { content: "\e623"; }
+.icon-zuojiantou:before { content: "\e615"; }
+.icon-dashangpinglun18:before { content: "\e606"; }
