--- a/css/index.css
+++ b/css/index.css
@@ -61,7 +61,7 @@ body{
     height: 60px;
     background:rgba(0,0,0,0.7);
     font-size: 18px;
-    position:fixed;
+    position:absolute;
     top: 0;
     left: 0;
     z-index: 4;
