--- a/css/index.css
+++ b/css/index.css
@@ -138,6 +138,7 @@ body{
 }
 .xia-img>div:nth-child(1){
     background: url("../images/dian6.jpg") no-repeat center center;
+    /*background-origin: padding-box;*/
 }
 .xia-img>div:nth-child(2){
     background: url("../images/dian2.jpg") no-repeat center center;
