--- a/css/index.css
+++ b/css/index.css
@@ -61,7 +61,7 @@ body{
     height: 60px;
     background:rgba(0,0,0,0.7);
     font-size: 18px;
-    position:absolute;
+    position:fixed;
     top: 0;
     left: 0;
     z-index: 4;
@@ -122,6 +122,7 @@ body{
     transform-style: preserve-3d;
     transform-origin: bottom;
     /*margin-top: -44px;*/
+   
 }
 .xia1{
     background:rgba(27,28,29,0.9);
@@ -574,6 +575,8 @@ body{
     right: 5%;
     font-size:25px !important;
     color:#999;
+    z-index: 5;
+
 }
 .huan:hover{
     color: #ccc;
