--- a/css/index.css
+++ b/css/index.css
@@ -109,7 +109,7 @@ body{
     padding: 20px;
     background: rgba(17,19,27,0.8);
     border-bottom: 1px dotted #525252;
-    box-shadow: inset;
+    cursor: pointer;
 }
 .header2-right>.row>div[class*=col]:hover{
     color:#fff;
@@ -909,15 +909,27 @@ p span{
     width: 40px;
     height: 40px;
     position: fixed;
-    bottom: 30px;
+    bottom: 15px;
     right: 10px;
     color:#999;
     transform:rotateZ(90deg);
-    font-size: 40px !important;
+    font-size: 30px !important;
     display: none;
     z-index: 4;
 }
 .top:hover{
     transition: all ease 1s;
     color: #ccc;
+}
+@media screen and (min-width: 800px) and (max-width: 1200px){
+    .top{
+        font-size:35px !important ;
+        bottom: 20px;
+    }
+}
+@media  screen and (min-width: 1200px) {
+    .top{
+        font-size:40px !important;
+        bottom: 20px;
+    }
 }
